<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradien"
    android:fitsSystemWindows="@bool/fitsSystemWindows"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/status_bar_height"
            android:background="?colorPrimaryDark" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/status_bar_height">

        <LinearLayout
            android:id="@+id/box_form"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_login_form"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/title_forgot"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradien_login_form">

                <TextView
                    android:id="@+id/textHintForgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="28dp"
                    android:text="@string/label_hint_forgot"
                    android:textColor="#ffff"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textHintForgot"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_form_field"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="#DEDEDE"
                    android:textColorHint="#465568" />

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editEmail"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/bg_login_button"
                    android:text="@string/label_kirim"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editEmail"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/email_not_found"
                    android:textColor="#e7606f"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/progressSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_alignBottom="@id/buttonSubmit"
                    android:layout_alignTop="@id/buttonSubmit"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/textBack"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/label_back_login"
                android:textColor="@color/white"
                android:textStyle="italic" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/box_form"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/login_copyright"
            android:textColor="@color/black" />

    </RelativeLayout>
</LinearLayout>