<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/bg_gradien"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_login_form"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/title_login"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_gradien_login_form">

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_form_field"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#465568"
                    android:textColorHint="#DEDEDE" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editUsername"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_form_field"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="#465568"
                    android:textColorHint="#DEDEDE" />

                <CheckBox
                    android:id="@+id/checkRemember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editPassword"
                    android:layout_margin="20dp"
                    android:checked="true"
                    android:text="@string/check_remember"
                    android:theme="@style/MyCheckBox"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textForgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editPassword"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="28dp"
                    android:layout_toRightOf="@id/checkRemember"
                    android:gravity="right"
                    android:text="@string/label_forgot"
                    android:textColor="@color/black"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/checkRemember"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bg_login_button"
                    android:text="@string/title_login"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/buttonLogin"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/error_login"
                    android:textColor="#e7606f"
                    android:visibility="gone" />

                <ProgressBar
                    android:id="@+id/progressLogin"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_alignBottom="@id/buttonLogin"
                    android:layout_alignTop="@id/buttonLogin"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="gone" />

            </RelativeLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/login_copyright"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>